--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "setup:dev": "node scripts/setup-dev.js",
+    "db:schema": "psql -d spektra_db -f database/spektra_schema.sql",
+    "db:sample": "psql -d spektra_db -f database/sample_data.sql",
+    "db:reset": "npm run db:schema && npm run db:sample",
+    "test:api": "echo 'API tests coming soon...'"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.14.1",
@@ -37,6 +42,10 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.15.5",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -44,10 +53,13 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "patch-package": "^8.0.0",
+    "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
